--- a/example/index.html
+++ b/example/index.html
@@ -19,12 +19,9 @@
     }
     .area.germany, .germany .circle {
       fill: #FFD700;
-      stroke: none;
+      stroke: RGB(255,0,0);
     }
-    .area.argentina, .argentina .circle {
-      fill: #ADD8E6;
-      stroke: none;
-    }
+   
   </style>
 
   <script type="text/javascript" src="http://d3js.org/d3.v3.js"></script>
@@ -38,7 +35,7 @@
   <script type="text/javascript">
     var data = [
       {
-        className: 'germany', // optional can be used for styling
+        studentID: 'germany', // optional can be used for styling
         axes: [
           {axis: "strength", value: 13}, 
           {axis: "intelligence", value: 6}, 
@@ -47,21 +44,12 @@
           {axis: "luck", value: 2}
         ]
       },
-      {
-        className: 'argentina',
-        axes: [
-          {axis: "strength", value: 6}, 
-          {axis: "intelligence", value: 7}, 
-          {axis: "charisma", value: 10},  
-          {axis: "dexterity", value: 13},  
-          {axis: "luck", value: 9}
-        ]
-      }
+      
     ];
     function randomDataset() {
       return data.map(function(d) {
         return {
-          className: d.className,
+          studentID: d.studentID,
           axes: d.axes.map(function(axis) {
             return {axis: axis.axis, value: Math.ceil(Math.random() * 10)};
           })
@@ -85,6 +73,7 @@
   svg.append('g').classed('single', 1).datum(randomDataset()).call(chart);
 
   // many radars
+  //could turn into a filmstrip slider
   chart.config({w: cfg.w / 4, h: cfg.h / 4, axisText: false, levels: 0, circles: false});
   cfg = chart.config();
   function render() {
